--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,28 @@
 header
 {
     display: flex;
-    background-color: #7F3001;
+    background-color: transparent;
+    padding: 20px;
+    top: 0;
     position: fixed;
     width: 100%;
-    opacity: 0.7,5;
+    z-index: 999;
+
+  
 }
 
+.content
+{
+    margin-top: 100px;
+    padding: 20px;
+}
 .listanav
 {
-    background-color: #7F3001;
-    color: #FFFFFF;
+   
+    color: #ff8033;
     display: flex;
     justify-content: center;
-    background-image: url(INDAYARA-removebg-preview.png);
+    background-image: url(INDAYARA-removebg-preview.png); 
 }
 
 .listanav li
