--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -1,13 +1,31 @@
 /* Trabalhos*/
+.video
+{
+    margin: 30px;
+    padding: 70px;
+    text-align: center;
+    background-color: #fff;
+    width: 100%;
+    height: 300px;
+}
+
+
 .corpo
 {
     display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    height: 100vh;
+    width: 100%;
+    height: 80vh;
     transition: 0.5s;
-    background: #000;
+    background:  #FF8033;
+}
+
+.tituloTrabalhos, .subtituloTrabalhos
+{
+    text-align: center;
 }
 
 .trabalhos
@@ -20,6 +38,7 @@
 
 .trabalhos .box 
 {
+    margin: auto;
     position: relative;
     min-width: 60px;
     overflow: hidden;
@@ -27,6 +46,17 @@
     background-size: auto 150%;
     background-position: center;
     cursor: pointer;
+    transition: background-size 1s ease, flex-grow 1s ease;
+    border-radius: 50px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+}
+
+.trabalhos .box:hover
+{
+    flex-grow: 1;
+    background-size: auto 100%;
+    border-radius: 50px;
+    transition: all 0.9s ease;
 }
 
 
@@ -47,20 +77,11 @@ main
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #FF8033;
+    background-color: #eeeae7;
     width: 100%;
     height: 600px;
 }
 
-.video
-{
-    margin: 30px;
-    padding: 70px;
-    text-align: center;
-    background-color: #fff;
-    width: 100%;
-    height: 300px;
-}
 
 .card
 {
