--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -26,6 +26,7 @@
 .tituloTrabalhos, .subtituloTrabalhos
 {
     text-align: center;
+    color: #fff;
 }
 
 .trabalhos
@@ -33,7 +34,7 @@
     display: flex;
     max-width: 800px;
     width: calc(100% - 100px);
-    height: 400px;
+    height: 600px;
 }
 
 .trabalhos .box 
