--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url(header.css);
+@import url(trabalhos.css);
 
 *
 {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
 }
 
 ul
