--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -20,7 +20,7 @@
     width: 100%;
     height: 80vh;
     transition: 0.5s;
-    background:  #FF8033;
+    background-image: url(/imagens/iya-logo.jpg);
 }
 
 .tituloTrabalhos, .subtituloTrabalhos
@@ -59,6 +59,8 @@
     border-radius: 50px;
     transition: all 0.9s ease;
 }
+
+
 
 
 
