--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -9,7 +9,10 @@
     height: 300px;
 }
 
-
+.bodyCorpo
+{
+    max-width: 1600px;
+}
 .corpo
 {
     display:flex;
@@ -20,7 +23,7 @@
     width: 100%;
     height: 80vh;
     transition: 0.5s;
-    background-image: url(/imagens/iya-logo.jpg);
+    background-color: #FF8033;
 }
 
 .tituloTrabalhos, .subtituloTrabalhos
