--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,9 @@
 header
 {
-    display: flex;
-    background-color: transparent;
-    padding: 20px;
-    top: 0;
+    display: flex;          
     position: fixed;
     width: 100%;
-    z-index: 999;
-
+    background-color: rgba(127, 48, 01, 0.9);
   
 }
 
@@ -27,6 +23,7 @@ header
 
 .listanav li
 {
-    font-size: 16px;
+    font-size: 20px;
     margin: 1rem;
+    font-family: "Open Sans", sans-serif;
 }
