--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url(header.css);
 @import url(sobre.css);
+@import url(historiadastranças.css);
+@import url(trabalhos.css);
+@import url(footer.css);
+
+
 
 *
 {
