--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url(header.css);
 @import url(trabalhos.css);
 @import url(historiadastranças.css);
+@import url(depoimentos.css);
+
 *
 {
     padding: 0;
