--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -11,7 +11,7 @@
 
 .bodyCorpo
 {
-    max-width: 1600px;
+    max-width: 1800px;
 }
 .corpo
 {
@@ -23,7 +23,7 @@
     width: 100%;
     height: 80vh;
     transition: 0.5s;
-    background-color: #FF8033;
+    
 }
 
 .tituloTrabalhos, .subtituloTrabalhos
@@ -35,16 +35,18 @@
 .trabalhos
 {
     display: flex;
+    justify-content: center;
     max-width: 800px;
     width: calc(100% - 100px);
     height: 600px;
+   
 }
 
 .trabalhos .box 
 {
     margin: auto;
     position: relative;
-    min-width: 60px;
+    min-width: 90px;
     overflow: hidden;
     margin: 10px;
     background-size: auto 150%;
@@ -63,10 +65,14 @@
     transition: all 0.9s ease;
 }
 
-
-
-
-
+.SessãoMari
+{
+    font-size: 80px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
 
 
 
