teste sexta feira

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import url(sobre.css);
 @import url(historiadastranças.css);
 @import url(depoimentos.css);
+@import url(trabalhos.css);
+@import url(footer.css);
 
 *
 {
