--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url(historiadastranças.css);
 @import url(depoimentos.css);
 @import url(trabalhos.css);
-@import url(footer.css);
+@import url(footer2.css);
 
 
 *
