--- a/css/depoimentos.css
+++ b/css/depoimentos.css
@@ -1,32 +1,30 @@
-.mb-3{
-    font-size: large;
-    
-}
+
 .slideContainer
 {
    
-    background-color: rgb(253, 243, 232);
+    background-color: #faf8f6;
     width: 100%;
-    height: 400px;
+    height: 450px;
     display: flex;
     align-items: center;
-    padding: 40px 0;
+    justify-content: center;
+  
 }
 .card
 {
     width: 320px;
-    height: 350px;
+    height: 400px;
     border-radius: 25px;
     margin: 30px;
     background-color: #fff;
 }   
 
 .cardImage .cardImg{
+    width: 100%;
     height: 100%;
-    height: 90%;
     object-fit: cover;
     border-radius: 90%;
-    border: 4px solid #fff;
+    border: 2px solid #fff;
 }
 
 .cardImage
@@ -103,3 +101,7 @@
 }
 
 
+img{
+    width: 60%;
+    height:100%;
+}
