--- a/css/footer2.css
+++ b/css/footer2.css
@@ -1,21 +1,92 @@
-body {
-    margin: 0;
-    padding: 0;
-  }
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
   
-  footer {
-    background-color: #ff8033 ;/* Cor de fundo do footer */
-    height: 200px; /* Altura do footer */
-    position: relative;
-  }
-  
-  .wave {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50px; /* Altura da onda */
-    background-color: #ff8033; /* Cor da onda */
-    border-radius: 50% 50% 0 0; /* Bordas arredondadas para criar a forma de onda */
-  }
-  
+body
+{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  min-height: 100vh;
+  font-family: "Open Sans", sans-serif;
+}
+
+footer
+{
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background: #f26f63;
+  height: 190px;
+  flex-direction: column;
+}
+
+footer .social-icons, footer .menu
+{
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+margin: 10px 0;
+flex-wrap: wrap;
+}
+
+footer .social-icons li, footer .menu li
+{
+  list-style: none;
+}
+
+footer .social-icons li a 
+{
+  font-size: 2em;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+
+footer .social-icons li a:hover
+{
+  transform: translateY(-10px);
+}
+
+footer .menu li a 
+{
+ font-size: 1.2em;
+ color: #fff;
+ margin: 0 10px;
+ display: inline-block;
+ text-decoration: none;
+ opacity: 0.75;
+ transition: 0.5s;
+}
+
+footer .menu li a:hover
+{
+  opacity: 1;
+}
+
+footer .wave
+{
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: url(../imagens/wave.png);
+  background-size: 100% 100px;
+}
+
+.spanFooter
+{
+  padding-top: 1rem;
+  border-top: 1px solid #fff;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
