--- a/css/depoimentos.css
+++ b/css/depoimentos.css
@@ -1,8 +1,15 @@
+.depoimentosCorpo
+{
+    background-color: rgb(250, 240, 232);
+    color: #F26F63;
+    text-align: center;
+    font-size: small;
 
+}
 .slideContainer
 {
    
-    background-color: #faf8f6;
+
     width: 100%;
     height: 450px;
     display: flex;
@@ -59,7 +66,7 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: #FF8033;
+    background-color: #F26F63;
     border-radius: 25px 25px 0 25px;
 }
 
@@ -71,7 +78,7 @@
     bottom: -40px;
     height: 40px;
     width: 40px;
-    background-color: #FF8033;
+    background-color: #F26F63;
 }
 
 .overlay::after
