--- a/css/historiadastranças.css
+++ b/css/historiadastranças.css
@@ -1,21 +1,13 @@
 .historiadastranças
 {
-    color: #7F3001;
-    text-align: center;
+    width: 450px;
+    margin: auto;
 }
 
 .historia
 {
-    justify-content: center;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.bloco1, .bloco4
-{
-    background-color: #7F3001;
-    color: #fff;
-    padding: 2rem;
+    width: 100%;
+    
 }
 
 .bloco1
@@ -24,42 +16,47 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    height: 400px;
     text-align: center;
     text-align: justify;
 }
-
+/*
 .bloco2
 {
-    /*border: 1px solid black;*/
+   
     width: 50%;
-    height: 400px;
-    background-image: url(../imagens/FREEPIK\ \(6\).jpg);
+    height: 350px;
+    background-image: url(../imagens/imgtranca2\ \(1\).svg);
     background-size: cover;
     background-position: center;
 }
 
 .bloco3
 {
-    /*border: 1px solid black;*/
     width: 50%;
-    height: 400px;
-    background-image: url(../imagens/FREEPIK__3_-removebg-preview.png);
+    height: 350px;
+    background-image: url(../imagens/imgtranca2\ \(2\).svg);
     background-size: cover;
     background-position: center;
-    background-color: #E6BE9D;
+  
 }
-
+*/
 .bloco4
 {
     /*border: 1px solid black;*/
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    height: 400px;
     text-align: justify;
     justify-content: center;
 }
 
+.bloco1Img
+{
+    width: 500px;
+}
+
+.txt1, .txt2
+{
+    color: #e69769;
+    width: 800px;
+}
