--- a/css/header.css
+++ b/css/header.css
@@ -1,29 +1,63 @@
-header
+*
 {
-    display: flex;          
-    position: fixed;
-    width: 100%;
-    background-color: rgba(127, 48, 01, 0.9);
-  
-}
-
-.content
-{
-    margin-top: 100px;
-    padding: 20px;
-}
-.listanav
-{
-   
-    color: #ff8033;
-    display: flex;
-    justify-content: center;
-    background-image: url(INDAYARA-removebg-preview.png); 
-}
-
-.listanav li
-{
-    font-size: 20px;
-    margin: 1rem;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
+}
+
+
+.imagemLogo
+{
+    width: 100px;
+}
+
+.sos
+{
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-color: black;
+}
+
+.header
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+   background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    background-color: rgba(255, 255, 255, 0.95);
+}
+
+.navbar a 
+{
+    position: relative;
+    font-size: 18px;
+    color: #ff8033;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 40px;
+}
+
+.navbar a::before
+{
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ff8033;
+}
+
+.navbar a:hover::before
+{
+  width: 100%;
+
 }
