--- a/css/footer2.css
+++ b/css/footer2.css
@@ -5,15 +5,7 @@
   box-sizing: border-box;
 }
   
-<<<<<<< Updated upstream
 .bodyDaMalu
-=======
-<<<<<<< HEAD
-.footer
-=======
-.bodyDaMalu
->>>>>>> 5694bfb986cf224ee5dae945dc957646802a5c77
->>>>>>> Stashed changes
 {
   display: flex;
   justify-content: center;
@@ -132,4 +124,9 @@ footer .wave
 .logoFavelas >img
 {
   width: 100px;
+}
+
+ul
+{
+  padding-left: 0!important;
 }
