--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -1,4 +1,11 @@
 /* Trabalhos*/
+*
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .corpo
 {
     display:flex;
@@ -32,16 +39,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-/* escopo a ser usado */
+/* escopo a ser usado 
 main
 {
     display: flex;
@@ -117,5 +115,12 @@ img
 {
     transform: translateY(0);
 }
+    */
 
 
+    /* História das tranças*/
+
+.tipos
+    {
+        list-style-type:decimal
+    }
