--- a/css/trabalhos.css
+++ b/css/trabalhos.css
@@ -56,6 +56,9 @@
     min-width: 90px;
     overflow: hidden;
     margin: 10px;
+    margin-top: 75px;
+   
+    
     background-size: auto 150%;
     background-position: center;
     cursor: pointer;
