--- a/css/header.css
+++ b/css/header.css
@@ -35,7 +35,7 @@
     background-color: rgba(255, 255, 255, 0.95);
 }
 
-.navbar a 
+.navbar li
 {
     position: relative;
     font-size: 18px;
@@ -45,7 +45,7 @@
     margin-left: 40px;
 }
 
-.navbar a::before
+.navbar li::before
 {
     content: '';
     position: absolute;
@@ -56,8 +56,23 @@
     background-color: #ff8033;
 }
 
-.navbar a:hover::before
+.navbar li:hover::before
 {
   width: 100%;
 
+}
+
+#btn-mobile
+{
+    display: none;
+}
+
+@media (max-width: 600px)
+{
+    #btn-mobile{
+        display: block;
+    }
+    #menu{
+        display: none;
+    }
 }
