--- a/css/sobre.css
+++ b/css/sobre.css
@@ -56,6 +56,7 @@ header
   color: #7f3001;
   background-color: #fff;
   padding: 8px;
+  font-size: 20px;
 
 }
 
@@ -77,6 +78,7 @@ header
     color: #7f3001;
     background-color: #fff;
     padding: 8px;
+    font-size: 20px;
 }
 
 .imagem2 > img{
