--- a/css/footer2.css
+++ b/css/footer2.css
@@ -21,7 +21,6 @@ footer
   align-items: center;
   width: 100%;
   background: #f26f63;
-  height: 190px;
   flex-direction: column;
 }
 
@@ -52,6 +51,7 @@ footer .social-icons li a
 footer .social-icons li a:hover
 {
   transform: translateY(-10px);
+  background-color: #f26f63;
 }
 
 footer .menu li a 
@@ -63,6 +63,7 @@ footer .menu li a
  text-decoration: none;
  opacity: 0.75;
  transition: 0.5s;
+
 }
 
 footer .menu2 li
@@ -83,6 +84,7 @@ footer .menu2 li
 footer .menu li a:hover
 {
   opacity: 1;
+  background-color: #f26f63!important;
 }
 
 footer .wave
@@ -129,4 +131,12 @@ footer .wave
 ul
 {
   padding-left: 0!important;
+}
+
+@media(max-width: 760px)
+{
+  footer .wave
+  {
+    position: static;
+  }    
 }
