--- a/css/sobre.css
+++ b/css/sobre.css
@@ -6,14 +6,17 @@
 
 
 
-
+.branco
+{
+    width: 100%;
+    height: 150px;
+}
 
 header
 {
     display: flex;          
     position: fixed;
     width: 100%;
-    padding: 20px;
     background-color: rgba(127, 48, 01, 0.9);
     border-radius: 5px;
   
@@ -36,7 +39,7 @@ header
 
 .adjusted
 {
-    min-width: 1200px;
+    max-width: 1200px;
     max-width: 100%;
     margin-bottom: 20px;
 }
@@ -44,26 +47,25 @@ header
 .estrutura1
 {
     display: flex;
- 
+    flex-wrap: wrap;
 }
 
 .texto1 
 {
   margin: auto;
-  width: 1000px;
+  max-width: 1000px;
   justify-content: center;
   border-left: #f26f63 solid 8px;
   color: #7f3001;
   background-color: #fff;
   padding: 8px;
-  font-size: 20px;
 
 }
 
 .estrutura2
 {
     display:flex;
-    
+    flex-wrap: wrap;
 }
 
 
@@ -72,13 +74,12 @@ header
 .texto2
 {
     margin: auto;
-    width: 1000px;
+    max-width: 1000px;
     justify-content: center;
-    border-right: #ff8033 solid 8px;
+    border-right: #f26f63 solid 8px;
     color: #7f3001;
     background-color: #fff;
     padding: 8px;
-    font-size: 20px;
 }
 
 .imagem2 > img{
@@ -86,3 +87,18 @@ header
 }
 
 
+@media (max-width: 760px)
+{
+    .p
+    {
+        padding: 25px;
+    }
+    .estrutura2
+    {
+        flex-direction: column-reverse;
+    }
+}
+
+.xiu{
+    text-decoration: none;
+}
